@@ -25,6 +25,7 @@ int main(int argc, char** argv)
 
   CCOpts Opts;
   Opts.OptLevel = 2;
+  Opts.LazyJITWrappers = false;
 
   DFFI Jit(Opts);
 
